2010-08-18  Ivan Maidanski <ivmai@mail.ru> (with help from Andreas Tobler)

	* os_dep.c (PROTECT, UNPROTECT): Correct VM_PROT_EXEC to
	VM_PROT_EXECUTE.

2010-08-14  Ivan Maidanski <ivmai@mail.ru>

	* aclocal.m4: Regenerate (by autoreconf -vif using autoconf-2.67,
	automake-1.11.1 and libtool-2.2.8).
	* configure: Ditto.
	* ltmain.sh: Ditto.
	* Makefile.in: Ditto.
	* include/private/config.h.in: Ditto.
	* m4/libtool.m4: Ditto.
	* m4/ltoptions.m4: Ditto.
	* m4/ltversion.m4: Ditto.
	* m4/lt~obsolete.m4: Ditto.

2010-08-14  Ivan Maidanski <ivmai@mail.ru>

	* os_dep.c (os2_alloc): Don't set PAG_EXECUTE unless
	pages_executable is on.
	* os_dep.c (os2_alloc): Add FIXME (for recursion).
	* os_dep.c (UNPROTECT): Abort with a more informative message if
	pages_executable is on ("mprotect" case).
	* os_dep.c (PROTECT, UNPROTECT): Set VM_PROT_EXEC if
	pages_executable is on (Darwin case).
	* pthread_support.c (GC_init_real_syms): Abort with an informative
	message if libgc is linked after libpthread.

2010-08-14  Ivan Maidanski <ivmai@mail.ru>

	* dyn_load.c (GC_register_dynlib_callback): Adjust "start" pointer
	for 64-bit targets.
	* pthread_support.c (start_mark_threads): Expand PTHREAD_CREATE
	macro.
	* pthread_support.c (start_mark_threads): Call INIT_REAL_SYMS()
	since REAL(pthread_create) is used.
	* pthread_support.c (PTHREAD_CREATE): Remove unused.

2010-08-14  Ivan Maidanski <ivmai@mail.ru>

	* extra/threadlibs.c (main): Remove --wrap for "read" (since not
	wrapped anymore).
	* doc/README.linux (GC_USE_LD_WRAP): Ditto.
	* os_dep.c (__wrap_read): Ditto (in the comment).

2010-08-14  Ivan Maidanski <ivmai@mail.ru> (with help from Hans Boehm)

	* include/gc_pthread_redirects.h: Test GC_PTHREADS and GC_H at the
	beginning of the file.
	* include/gc_pthread_redirects.h (GC_PTHREAD_EXIT_ATTRIBUTE): New
	macro (defined only for Linux and Solaris).
	* include/gc_pthread_redirects.h (GC_pthread_cancel,
	GC_pthread_exit): Declare new API function (only if