@@ -1,3 +1,7 @@
+2010-08-18  Ivan Maidanski <ivmai@mail.ru> (really Andreas Tobler)
+
+	* include/private/gcconfig.h: Add support for FreeBSD on ppc64.
+
 2010-08-18  Ivan Maidanski <ivmai@mail.ru> (with help from Andreas Tobler)
 
 	* os_dep.c (PROTECT, UNPROTECT): Correct VM_PROT_EXEC to
